--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,22 +1,33 @@
-<div class="header clearfix">
-  <nav>
-    <ul class="nav nav-pills pull-right">
-      <li role="presentation" class="active"><%= link_to "Strona Główna",  static_pages_home_path %></li>
-
-      <% if user_signed_in? %>
-        <li role="presentation"><%= link_to "Edycja Profilu", edit_user_registration_path %></li>
-        <li role="presentation"><%= link_to "Wylogowanie", destroy_user_session_path, method: :delete %></li>
-        <% if current_user.admin? %>
-          <li role="presentation"><%= link_to "Zaplecze", static_pages_paneladmina_path %></li>
-        <% else %>
-        <li></li>
-        <% end %>
-        <% else %>
-        <li role="presentation"><%= link_to "Logowanie", new_user_session_url %></li>
-        <li role="presentation"><%= link_to "Rejestracja", new_user_registration_path %></li>
-      <% end %>
-
-
-    </ul>
-  </nav>
+<nav class="navbar navbar-default" role="navigation">
+<div class="container">
+<div class="navbar-header">
+<button type="button" class="navbar-toggle collapsed" data- 6 toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+<span class="sr-only">Toggle navigation</span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+</button>
+<%= link_to 'Awaria', root_path, class: 'navbar-brand' %>
 </div>
+<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+<ul class="nav navbar-nav navbar-right">
+        <%= link_to "Strona Główna",  static_pages_home_path, class: 'btn btn-default' %>
+        <% if user_signed_in? %>
+          <%= link_to "Edycja Profilu", edit_user_registration_path, class: 'btn btn-default' %>
+          <%= link_to "Wylogowanie", destroy_user_session_path, method: :delete, class: 'btn btn-danger' %>
+          <% if current_user.admin? %>
+            <%= link_to "Zaplecze", static_pages_paneladmina_path, class: 'btn btn-success' %>
+          <% else %>
+          <% end %>
+          <% else %>
+          <%= link_to "Logowanie", new_user_session_url, class: 'btn btn-success' %>
+          <%= link_to "Rejestracja", new_user_registration_path, class: 'btn btn-success' %>
+        <% end %>
+      </ul>
+      </div>
+      </div>
+      <br>
+      <% flash.each do |name, msg| %>
+      <%= content_tag(:div, msg, class: "alert alert-info") %>
+      <% end %>
+      </nav>
