--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,15 +3,15 @@
   <head>
     <title>Awaria</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
+    <%= render 'layouts/header' %>
     <div class="container">
-      <%= render 'layouts/header' %>
+      <div class="jumbotron">
        <%= yield %>
+     </div>
      </div>
   </body>
 </html>
