--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,33 +1,20 @@
-<nav class="navbar navbar-default" role="navigation">
-<div class="container">
-<div class="navbar-header">
-<button type="button" class="navbar-toggle collapsed" data- 6 toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-<span class="sr-only">Toggle navigation</span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-</button>
-<%= link_to 'Awaria', root_path, class: 'navbar-brand' %>
-</div>
-<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-<ul class="nav navbar-nav navbar-right">
-        <%= link_to "Strona Główna",  static_pages_home_path, class: 'btn btn-default' %>
-        <% if user_signed_in? %>
-          <%= link_to "Edycja Profilu", edit_user_registration_path, class: 'btn btn-default' %>
-          <%= link_to "Wylogowanie", destroy_user_session_path, method: :delete, class: 'btn btn-danger' %>
-          <% if current_user.admin? %>
-            <%= link_to "Zaplecze", static_pages_paneladmina_path, class: 'btn btn-success' %>
-          <% else %>
-          <% end %>
-          <% else %>
-          <%= link_to "Logowanie", new_user_session_url, class: 'btn btn-success' %>
-          <%= link_to "Rejestracja", new_user_registration_path, class: 'btn btn-success' %>
+
+<nav class="navbar navbar-inverse">
+  <div class="container">
+    <div class="navbar-header">
+      <%= link_to "Strona Główna",  static_pages_home_path, class: 'navbar-brand' %>
+      <% if user_signed_in? %>
+        <%= link_to "Zgłoszenia", zgloszenies_path, class: 'navbar-brand' %>
+        <%= link_to "Edycja Profilu", edit_user_registration_path, class: 'navbar-brand' %>
+        <%= link_to "Wylogowanie", destroy_user_session_path, method: :delete, class: 'navbar-brand' %>
+        <% if current_user.admin? %>
+          <%= link_to "Zaplecze", static_pages_paneladmina_path, class: 'navbar-brand' %>
+        <% else %>
         <% end %>
-      </ul>
-      </div>
-      </div>
-      <br>
-      <% flash.each do |name, msg| %>
-      <%= content_tag(:div, msg, class: "alert alert-info") %>
+        <% else %>
+        <%= link_to "Logowanie", new_user_session_url, class: 'navbar-brand' %>
+        <%= link_to "Rejestracja", new_user_registration_path, class: 'navbar-brand' %>
       <% end %>
-      </nav>
+    </div>
+  </div>
+</nav>
