--- a/app/views/zgloszenie_aktywnoscs/edit.html.erb
+++ b/app/views/zgloszenie_aktywnoscs/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Zgloszenie Aktywnosc</h1>
+<h1>Edycja Zgloszenia Aktywności</h1>
 
 <%= render 'form', zgloszenie_aktywnosc: @zgloszenie_aktywnosc %>
 
-<%= link_to 'Show', @zgloszenie_aktywnosc %> |
-<%= link_to 'Back', zgloszenie_aktywnoscs_path %>
+<%= link_to 'Pokaż', @zgloszenie_aktywnosc %> |
+<%= link_to 'Wróć', zgloszenie_aktywnoscs_path %>
