--- a/app/views/zgloszenie_aktywnoscs/new.html.erb
+++ b/app/views/zgloszenie_aktywnoscs/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Zgloszenie Aktywnosc</h1>
+<h1>Nowe Zgłoszenie</h1>
 
 <%= render 'form', zgloszenie_aktywnosc: @zgloszenie_aktywnosc %>
 
-<%= link_to 'Back', zgloszenie_aktywnoscs_path %>
+<%= link_to 'Wróć', zgloszenie_aktywnoscs_path %>
