--- a/app/views/zgloszenie_aktywnoscs/show.html.erb
+++ b/app/views/zgloszenie_aktywnoscs/show.html.erb
@@ -10,5 +10,5 @@
   <%= @zgloszenie_aktywnosc.tresc %>
 </p>
 
-<%= link_to 'Edit', edit_zgloszenie_aktywnosc_path(@zgloszenie_aktywnosc) %> |
-<%= link_to 'Back', zgloszenie_aktywnoscs_path %>
+<%= link_to 'Edytuj', edit_zgloszenie_aktywnosc_path(@zgloszenie_aktywnosc) %> |
+<%= link_to 'Wróć', zgloszenie_aktywnoscs_path %>
