--- a/app/views/zgloszenies/show.html.erb
+++ b/app/views/zgloszenies/show.html.erb
@@ -50,5 +50,5 @@
   <%= @zgloszeny.wysylka %>
 </p>
 
-<%= link_to 'Edit', edit_zgloszeny_path(@zgloszeny) %> |
-<%= link_to 'Back', zgloszenies_path %>
+<%= link_to 'Edytuj', edit_zgloszeny_path(@zgloszeny) %> |
+<%= link_to 'Wróć', zgloszenies_path %>
