--- a/app/views/zgloszenies/index.html.erb
+++ b/app/views/zgloszenies/index.html.erb
@@ -24,9 +24,9 @@
     <% @zgloszenies.each do |zgloszeny| %>
       <tr>
         <td><%= zgloszeny.id %></td>
-        <td><%= zgloszeny.klient %></td>
-        <td><%= zgloszeny.pracownik %></td>
-        <td><%= zgloszeny.dzial %></td>
+        <td><%= zgloszeny.klient_id %></td>
+        <td><%= zgloszeny.pracownik_id %></td>
+        <td><%= zgloszeny.dzial_id %></td>
         <td><%= zgloszeny.priorytet %></td>
         <td><%= zgloszeny.status %></td>
         <td><%= zgloszeny.data_zgloszenia %></td>
