--- a/app/views/zgloszenies/show.html.erb
+++ b/app/views/zgloszenies/show.html.erb
@@ -2,17 +2,17 @@
 
 <p>
   <strong>Klient:</strong>
-  <%= @zgloszeny.klient %>
+  <%= @zgloszeny.klient_id %>
 </p>
 
 <p>
   <strong>Pracownik:</strong>
-  <%= @zgloszeny.pracownik %>
+  <%= @zgloszeny.pracownik_id %>
 </p>
 
 <p>
   <strong>Dzial:</strong>
-  <%= @zgloszeny.dzial %>
+  <%= @zgloszeny.dzial_id %>
 </p>
 
 <p>
