--- a/app/views/static_pages/paneladmina.html.erb
+++ b/app/views/static_pages/paneladmina.html.erb
@@ -4,6 +4,7 @@
 <p align="center">
  <%= link_to 'Użytkownicy', users_path, class:'btn btn-primary' %>
  <%= link_to 'Pracownicy', pracowniks_path, class:'btn btn-primary' %>
+ <%= link_to 'Klienci', klients_path, class:'btn btn-primary' %>
  <%= link_to 'Stanowiska', stanowiskos_path, class:'btn btn-primary' %>
  <%= link_to 'Działy', dzials_path, class:'btn btn-primary' %>
  <%= link_to 'Zgłoszenia', zgloszenies_path, class:'btn btn-primary' %>
