--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,3 +2,6 @@
 <div class="jumbotron">
 <p align="center"><b>Awaria</b> - system rejestrowania usterek i napraw.</p>
 </div>
+
+<%= User.find(1) %>
+<%= @users %>
