--- a/app/views/zgloszenies/show.html.erb
+++ b/app/views/zgloszenies/show.html.erb
@@ -1,26 +1,16 @@
 <p id="notice"><%= notice %></p>
 
+<div class="jumbotron">
+
 <p>
   <strong>Klient:</strong>
-  <%= @zgloszeny.klient_id %>
-</p>
-
-<p>
+  <%= Klient.where(id:@zgloszeny.klient_id).pluck(:nazwa).last %>
   <strong>Pracownik:</strong>
-  <%= @zgloszeny.pracownik_id %>
-</p>
-
-<p>
+  <%= Pracownik.where(id:@zgloszeny.pracownik_id).pluck(:nazwa).last %>
   <strong>Dzial:</strong>
-  <%= @zgloszeny.dzial_id %>
-</p>
-
-<p>
+  <%= Dzial.where(id:@zgloszeny.dzial_id).pluck(:nazwa).last %>
   <strong>Priorytet:</strong>
   <%= @zgloszeny.priorytet %>
-</p>
-
-<p>
   <strong>Status:</strong>
   <%= @zgloszeny.status %>
 </p>
@@ -28,9 +18,6 @@
 <p>
   <strong>Data zgloszenia:</strong>
   <%= @zgloszeny.data_zgloszenia %>
-</p>
-
-<p>
   <strong>Data naprawy:</strong>
   <%= @zgloszeny.data_naprawy %>
 </p>
@@ -38,9 +25,6 @@
 <p>
   <strong>Opis uszkodzenia:</strong>
   <%= @zgloszeny.opis_uszkodzenia %>
-</p>
-
-<p>
   <strong>Nazwa urzadzenia:</strong>
   <%= @zgloszeny.nazwa_urzadzenia %>
 </p>
@@ -50,5 +34,5 @@
   <%= @zgloszeny.wysylka %>
 </p>
 
-<%= link_to 'Edytuj', edit_zgloszeny_path(@zgloszeny) %> |
-<%= link_to 'Wróć', zgloszenies_path %>
+<%= link_to 'Edytuj', edit_zgloszeny_path(@zgloszeny), class:'btn btn btn-warning' %>
+<%= link_to 'Wróć', zgloszenies_path, class:'btn btn btn-primary' %>
