--- a/app/views/dzials/new.html.erb
+++ b/app/views/dzials/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Dzial</h1>
+<h1>Nowy Dział</h1>
 
 <%= render 'form', dzial: @dzial %>
-
-<%= link_to 'Back', dzials_path %>
+<div class="actions">
+<%= link_to 'Wróć', dzials_path, class: "btn btn-primary" %></div>
