--- a/app/views/klients/_form.html.erb
+++ b/app/views/klients/_form.html.erb
@@ -12,41 +12,41 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :nazwa %>
+    <%= f.label :nazwa %><br/>
     <%= f.text_area :nazwa %>
-  </div>
+  </div><br/>
 
   <div class="field">
-    <%= f.label :nip %>
+    <%= f.label :nip %><br/>
     <%= f.number_field :nip %>
-  </div>
+  </div><br/>
 
   <div class="field">
-    <%= f.label :kod_pocztowy %>
+    <%= f.label :kod_pocztowy %><br/>
     <%= f.number_field :kod_pocztowy %>
-  </div>
+  </div><br/>
 
   <div class="field">
-    <%= f.label :poczta %>
+    <%= f.label :poczta %><br/>
     <%= f.text_area :poczta %>
-  </div>
+  </div><br/>
 
   <div class="field">
-    <%= f.label :adres %>
+    <%= f.label :adres %><br/>
     <%= f.text_area :adres %>
-  </div>
+  </div><br/>
 
   <div class="field">
-    <%= f.label :telefon %>
+    <%= f.label :telefon %><br/>
     <%= f.number_field :telefon %>
-  </div>
+  </div><br/>
 
   <div class="field">
-    <%= f.label :email %>
+    <%= f.label :email %><br/>
     <%= f.text_area :email %>
-  </div>
+  </div><br />
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Aktualizuj", class: "btn btn-success" %>
   </div>
-<% end %>
+<% end %><br />
