--- a/app/views/zgloszenie_aktywnoscs/_form.html.erb
+++ b/app/views/zgloszenie_aktywnoscs/_form.html.erb
@@ -12,16 +12,16 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :zgloszenie_id %>
+    <%= f.label :zgloszenie_id %><br />
     <%= f.text_field :zgloszenie_id %>
-  </div>
+  </div><br />
 
   <div class="field">
-    <%= f.label :tresc %>
+    <%= f.label :tresc %><br />
     <%= f.text_area :tresc %>
-  </div>
+  </div><br />
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Dodaj", class:'btn btn-success' %>
   </div>
-<% end %>
+<% end %><br />
