--- a/app/views/zgloszenie_aktywnoscs/new.html.erb
+++ b/app/views/zgloszenie_aktywnoscs/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', zgloszenie_aktywnosc: @zgloszenie_aktywnosc %>
 
-<%= link_to 'Wróć', zgloszenie_aktywnoscs_path %>
+<%= link_to 'Wróć', zgloszenie_aktywnoscs_path , class: "btn btn-primary"%>
