--- a/app/views/zgloszenies/new.html.erb
+++ b/app/views/zgloszenies/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Zgloszeny</h1>
+<h1>Nowe Zgłoszenie</h1>
 
 <%= render 'form', zgloszeny: @zgloszeny %>
-
-<%= link_to 'Back', zgloszenies_path %>
+<div class="actions">
+<%= link_to 'Wróć', zgloszenies_path, class: "btn btn-primary" %>
+</div><br />
