--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Edycja <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -10,34 +10,36 @@
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+  <% end %><br />
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.label :hasło %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
     <% if @minimum_password_length %>
       <br />
       <em><%= @minimum_password_length %> characters minimum</em>
     <% end %>
-  </div>
+  </div><br />
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :Powtórz_hasło %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+  </div><br />
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.label :Aktualne_hasło %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
+  </div><br />
 
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "Aktualizuj", class:'btn btn-primary' %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h3>Chcesz usunąć konto?</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+  <%= button_to "Usuń konto", registration_path(resource_name), data: { confirm: "Jesteś pewny?" }, method: :delete, class:'btn btn-danger' %><br />
 
-<%= link_to "Back", :back %>
+<div class="actions">
+<%= link_to "Wróć", :back, class: "btn btn-success" %>
+ </div><br />
