--- a/app/views/dzials/_form.html.erb
+++ b/app/views/dzials/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :nazwa %>
+    <%= f.label :nazwa %><br />
     <%= f.text_area :nazwa %>
-  </div>
+  </div><br />
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Dodaj Dział", class: "btn btn-success" %>
   </div>
-<% end %>
+<% end %><br />
