--- a/app/views/dzials/show.html.erb
+++ b/app/views/dzials/show.html.erb
@@ -1,11 +1,16 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Nazwa:</strong>
-  <%= @dzial.nazwa %>
   <strong>ID:</strong>
   <%= @dzial.id %>
 </p>
-
-<%= link_to 'Edit', edit_dzial_path(@dzial) %> |
-<%= link_to 'Back', dzials_path %>
+<p>
+  <strong>Nazwa:</strong>
+  <%= @dzial.nazwa %>
+  </p>
+ 
+<div class="actions">
+<%= link_to 'Edytuj', edit_dzial_path(@dzial), class: "btn btn-primary" %></div><br />
+<div class="actions">
+<%= link_to 'Wróć', dzials_path, class: "btn btn-success" %>
+</div>
