--- a/app/views/klients/edit.html.erb
+++ b/app/views/klients/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Klient</h1>
+<h1>Edytuj Klienta</h1>
 
 <%= render 'form', klient: @klient %>
 
-<%= link_to 'Show', @klient %> |
-<%= link_to 'Back', klients_path %>
+<div class="actions">
+<%= link_to 'Pokaż', @klient , class: "btn btn-primary" %>
+<%= link_to 'Wróć', klients_path, class: "btn btn-danger"%>
+</div><br />
