--- a/app/views/klients/new.html.erb
+++ b/app/views/klients/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Klient</h1>
+<h1>Nowy Klient</h1>
 
 <%= render 'form', klient: @klient %>
 
-<%= link_to 'Back', klients_path %>
+<div class="actions">
+<%= link_to 'Wróć', klients_path, class: "btn btn-primary" %>
+</div><br/>
