--- a/app/views/pracowniks/_form.html.erb
+++ b/app/views/pracowniks/_form.html.erb
@@ -17,19 +17,19 @@
   </div> -->
 
    <div class="field">
-     <%= f.label :stanowisko %>
+     <%= f.label :stanowisko %><br />
      <%= f.collection_select :stanowisko_id, Stanowisko.all, :id, :nazwa, prompt: true %>
-   </div>
+   </div><br/>
 
   <div class="field">
-    <%= f.label :dzial_id %>
+    <%= f.label :dzial_id %><br />
     <%= f.collection_select :dzial_id, Dzial.all, :id, :nazwa, prompt: true %>
-  </div>
+  </div><br />
 
   <div class="field">
-    <%= f.label :nazwa %>
+    <%= f.label :nazwa %><br />
     <%= f.text_area :nazwa %>
-  </div>
+  </div><br/>
 
   <!-- <div class="field">
     <%= f.label :stanowisko %>
@@ -37,16 +37,16 @@
   </div> -->
 
   <div class="field">
-    <%= f.label :telefon %>
+    <%= f.label :telefon %><br />
     <%= f.number_field :telefon %>
-  </div>
+  </div><br/>
 
   <div class="field">
-    <%= f.label :email %>
+    <%= f.label :email %><br/>
     <%= f.text_area :email %>
-  </div>
+  </div><br />
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :Aktualizuj, class: "btn btn-success" %>
   </div>
-<% end %>
+<% end %><br />
