--- a/app/views/pracowniks/edit.html.erb
+++ b/app/views/pracowniks/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Pracownik</h1>
+<h1>Edytuj Pracownika</h1>
 
 <%= render 'form', pracownik: @pracownik %>
 
-<%= link_to 'Show', @pracownik %> |
-<%= link_to 'Back', pracowniks_path %>
+<div class="actions">
+<%= link_to 'Pokaż', @pracownik, class: "btn btn-primary" %>
+<%= link_to 'Wróć', pracowniks_path, class: "btn btn-danger" %>
+</div><br/>
