--- a/app/views/stanowiskos/_form.html.erb
+++ b/app/views/stanowiskos/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :nazwa %>
+    <%= f.label :nazwa %><br/>
     <%= f.text_area :nazwa %>
-  </div>
+  </div><br />
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Aktualizuj", class: "btn btn-danger"%>
   </div>
-<% end %>
+<% end %><br />
