--- a/app/views/stanowiskos/new.html.erb
+++ b/app/views/stanowiskos/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Stanowisko</h1>
+<h1>Nowe Stanowisko</h1>
 
 <%= render 'form', stanowisko: @stanowisko %>
-
-<%= link_to 'Back', stanowiskos_path %>
+<div class="actions">
+<%= link_to 'Wróć', stanowiskos_path, class: "btn btn-primary" %>
+</div>
