--- a/app/views/zgloszenie_aktywnoscs/show.html.erb
+++ b/app/views/zgloszenie_aktywnoscs/show.html.erb
@@ -1,14 +1,16 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Zgloszenie:</strong>
+  <strong>Zgłoszenie:</strong>
   <%= @zgloszenie_aktywnosc.zgloszenie %>
 </p>
 
 <p>
-  <strong>Tresc:</strong>
+  <strong>Treść:</strong>
   <%= @zgloszenie_aktywnosc.tresc %>
-</p>
+</p><br />
 
-<%= link_to 'Edytuj', edit_zgloszenie_aktywnosc_path(@zgloszenie_aktywnosc) %> |
-<%= link_to 'Wróć', zgloszenie_aktywnoscs_path %>
+<div class="actions">
+<%= link_to 'Edytuj', edit_zgloszenie_aktywnosc_path(@zgloszenie_aktywnosc), class: "btn btn-primary" %>
+<%= link_to 'Wróć', zgloszenie_aktywnoscs_path , class: "btn btn-success" %>
+</div>
