--- a/app/views/klients/index.html.erb
+++ b/app/views/klients/index.html.erb
@@ -2,6 +2,7 @@
 
 <h1>Klient</h1>
 <div class="jumbotron">
+<div class="table-responsive">
 <table class="table table-striped">
   <thead>
     <tr>
@@ -33,7 +34,6 @@
     <% end %>
   </tbody>
 </table>
-
 <br>
-
+</div>
 <%= link_to 'Nowy klient', new_klient_path, class: 'btn btn-success'  %>
