--- a/app/views/pracowniks/index.html.erb
+++ b/app/views/pracowniks/index.html.erb
@@ -2,6 +2,7 @@
 
 <h1>Pracownicy</h1>
 <div class="jumbotron">
+<div class="table-responsive">
 <table class="table table-striped">
   <thead>
     <tr>
@@ -29,6 +30,7 @@
     <% end %>
   </tbody>
 </table>
+</div>
 <%= link_to 'Dodaj nowego pracownika', new_pracownik_path, class:'btn btn-success' %>
 <%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-primary' %>
 </div>
