--- a/app/views/stanowiskos/index.html.erb
+++ b/app/views/stanowiskos/index.html.erb
@@ -2,6 +2,7 @@
 
 <h1>Stanowiska</h1>
 <div class="jumbotron">
+<div class="table-responsive">
 <table class="table table-striped">
   <thead>
     <tr>
@@ -23,6 +24,7 @@
     <% end %>
   </tbody>
 </table>
+</div>
 <%= link_to 'Dodaj nowe stanowisko', new_stanowisko_path, class:'btn btn-success' %>
 <%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-primary' %>
 </div>
