--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,6 +7,7 @@
 <% end %>
 
 <div class="jumbotron">
+<div class="table-responsive">
 <table class="table table-striped">
   <thead>
     <tr>
@@ -39,5 +40,6 @@
     <% end %>
   </tbody>
 </table>
+</div>
 <p><%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-primary' %></p>
 </div>
