--- a/app/views/zgloszenie_aktywnoscs/index.html.erb
+++ b/app/views/zgloszenie_aktywnoscs/index.html.erb
@@ -2,6 +2,7 @@
 
 <h1>Zgłoszenie - Aktywność</h1>
 <div class="jumbotron">
+<div class="table-responsive">
 <table class="table table-striped">
   <thead>
     <tr>
@@ -25,6 +26,7 @@
     <% end %>
   </tbody>
 </table>
+</div>
 <%= link_to 'Dodaj nową do zgłoszenia', new_zgloszenie_aktywnosc_path, class:'btn btn-success' %>
 <% if current_user.admin? %>
 <%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-primary' %>
