--- a/app/views/pracowniks/_form.html.erb
+++ b/app/views/pracowniks/_form.html.erb
@@ -18,12 +18,12 @@
 
    <div class="field">
      <%= f.label :stanowisko %><br />
-     <%= f.collection_select :stanowisko_id, Stanowisko.all, :id, :nazwa, prompt: true %>
+     <%= f.collection_select :stanowisko_id, Stanowisko.all, :id, :nazwa, prompt: "Wybierz" %>
    </div><br/>
 
   <div class="field">
     <%= f.label :dzial_id %><br />
-    <%= f.collection_select :dzial_id, Dzial.all, :id, :nazwa, prompt: true %>
+    <%= f.collection_select :dzial_id, Dzial.all, :id, :nazwa, prompt: "Wybierz" %>
   </div><br />
 
   <div class="field">
