--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,11 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
+      <% flash.each do |name, msg| %>
+      <%= content_tag(:div, msg, class: "alert alert-info") %>
+      <% end %>
        <%= yield %>
      </div>
+
   </body>
 </html>
