--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,6 +10,7 @@
       <th>Adres email</th>
       <th>Dział</th>
       <th>Typ konta</th>
+      <th>Pracownik?</th>
       <th>Admin?</th>
       <th>Utworzony</th>
       <th colspan="3">Akcje</th>
@@ -25,10 +26,15 @@
         <td><%= user.email %></td>
         <td><%= Dzial.where(id:user.dzial_id).pluck(:nazwa).last %></td>
         <td><%= Stanowisko.where(id:user.stanowisko_id).pluck(:nazwa).last %></td>
+        <td><%= user.ispracownik %></td>
         <td><%= user.admin %></td>
         <td><%= user.created_at %></td>
-        <td><%= link_to "Admin +", admin_grant_admin_user_path(user), method: :grantadmin, data: { confirm: "Jesteś pewny?" }, class:'btn btn-xs btn-warning' %></td>
-        <td><%= link_to "Admin -", admin_deny_admin_user_path(user), method: :denyadmin, data: { confirm: "Jesteś pewny?" }, class:'btn btn-xs btn-warning' %></td>
+        <% if user.admin = true %>
+          <td><%= link_to "Admin +", admin_grant_admin_user_path(user), method: :grantadmin, data: { confirm: "Jesteś pewny?" }, class:'btn btn-xs btn-warning' %></td>
+        <% elsif user.admin = false %>
+          <td><%= link_to "Admin -", admin_deny_admin_user_path(user), method: :denyadmin, data: { confirm: "Jesteś pewny?" }, class:'btn btn-xs btn-warning' %></td>
+        <% end %>
+        <td><%= link_to "Pracownik +", pracownik_dodaj_pracownik_user_path(user), method: :dodajpracownik, data: { confirm: "Jesteś pewny?" }, class:'btn btn-xs btn-warning' %></td>
         <td><%= link_to "Usuń", admin_destroy_user_path(user), method: :delete, data: { confirm: "Jesteś pewny?" }, class:'btn btn-xs btn-danger' %></td>
       </tr>
     <% end %>
