--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,11 @@
     <div class="navbar-header">
       <%= link_to "Strona Główna",  static_pages_home_path, class: 'navbar-brand' %>
       <% if user_signed_in? %>
-        <%= link_to "Zgłoszenia", zgloszenies_path, class: 'navbar-brand' %>
+      <% if current_user.ispracownik? %>
+          <%= link_to "Moje Zlecenia", static_pages_showzgloszenies_path, class: 'navbar-brand' %>
+        <% else %>
+          <%= link_to "Zgłoszenia", zgloszenies_path, class: 'navbar-brand' %>
+        <% end %>
         <%= link_to "Edycja Profilu", edit_user_registration_path, class: 'navbar-brand' %>
         <%= link_to "Wylogowanie", destroy_user_session_path, method: :delete, class: 'navbar-brand' %>
         <% if current_user.admin? %>
