--- a/app/views/zgloszenies/index.html.erb
+++ b/app/views/zgloszenies/index.html.erb
@@ -15,6 +15,7 @@
       <th>Opis uszkodzenia</th>
       <th>Nazwa urzadzenia</th>
       <!-- <th>Wysylka</th> -->
+      <th>user_id</th>
       <th colspan="3">Akcje</th>
     </tr>
   </thead>
@@ -32,6 +33,7 @@
         <td><%= zgloszeny.data_naprawy %></td>
         <td><%= zgloszeny.opis_uszkodzenia %></td>
         <td><%= zgloszeny.nazwa_urzadzenia %></td>
+        <td><%= zgloszeny.user_id %></td>
         <!-- <td><%= zgloszeny.wysylka %></td> -->
         <td><%= link_to 'Pokaż', zgloszeny, class:'btn btn-xs btn-primary' %></td>
         <td><%= link_to 'Edytuj', edit_zgloszeny_path(zgloszeny), class:'btn btn-xs btn-warning' %></td>
