--- a/app/views/dzials/show.html.erb
+++ b/app/views/dzials/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<div class="jumbotron">
 <p>
   <strong>ID:</strong>
   <%= @dzial.id %>
@@ -13,4 +14,5 @@
 <%= link_to 'Edytuj', edit_dzial_path(@dzial), class: "btn btn-primary" %></div><br />
 <div class="actions">
 <%= link_to 'Wróć', dzials_path, class: "btn btn-success" %>
+</div>
 </div>
