--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,19 +1,21 @@
-<h2>Edycja <%= resource_name.to_s.humanize %></h2>
+<h2>Edycja użytkownika</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
+<div class="jumbotron">
+
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.label :Email %><br/>
+    <%= f.email_field :email, autofocus: true %></p>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %><br />
+  <% end %>
 
   <div class="field">
-    <%= f.label :hasło %> <i>(leave blank if you don't want to change it)</i><br />
+     <%= f.label :Hasło %><br/>
     <%= f.password_field :password, autocomplete: "off" %>
     <% if @minimum_password_length %>
       <br />
@@ -22,7 +24,7 @@
   </div><br />
 
   <div class="field">
-    <%= f.label :Powtórz_hasło %><br />
+     <%= f.label :Powtórz_hasło %><br/>
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div><br />
 
