--- a/app/views/pracowniks/index.html.erb
+++ b/app/views/pracowniks/index.html.erb
@@ -1,35 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Pracownicy</h1>
+<%= form_tag( pracowniks_path ,method: :get, remote: true, class: "search_form") do %>
+<%= text_field_tag :search, params[:search], placeholder: 'Wyszukaj...' %>
+<% end %> <br />
 <div class="jumbotron">
 <div class="table-responsive">
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Stanowisko</th>
-      <th>Dzial</th>
-      <th>Nazwa</th>
-      <th>Telefon</th>
-      <th>Email</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @pracowniks.each do |pracownik| %>
-      <tr>
-        <td><%= Stanowisko.where(id:pracownik.stanowisko_id).pluck(:nazwa).last %></td>
-        <td><%= Dzial.where(id:pracownik.dzial_id).pluck(:nazwa).last %></td>
-        <td><%= pracownik.nazwa %></td>
-        <td><%= pracownik.telefon %></td>
-        <td><%= pracownik.email %></td>
-        <td><%= link_to 'Pokaż', pracownik, class: "btn btn-xs btn-primary" %></td>
-        <td><%= link_to 'Edytuj', edit_pracownik_path(pracownik), class: "btn btn-xs btn-success" %></td>
-        <td><%= link_to 'Usuń', pracownik, method: :delete, data: { confirm: 'Jesteś pewny?' }, class: "btn btn-xs btn-danger" %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render 'pracowniks/partials/pracowniks_table', pracowniks: @pracowniks %>
 </div>
 <%= link_to 'Dodaj nowego pracownika', new_pracownik_path, class:'btn btn-success' %>
 <%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-primary' %>
