--- a/app/views/pracowniks/show.html.erb
+++ b/app/views/pracowniks/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<div class="jumbotron">
 <p>
   <strong>Stanowisko:</strong>
   <%= Stanowisko.where(id:@pracownik.stanowisko_id).pluck(:nazwa).last %>
@@ -27,4 +27,5 @@
 <div class="actions">
 <%= link_to 'Edytuj', edit_pracownik_path(@pracownik), class: "btn btn-primary" %>
 <%= link_to 'Wróć', pracowniks_path, class: "btn btn-success" %>
+</div>
 </div>
