--- a/app/views/stanowiskos/show.html.erb
+++ b/app/views/stanowiskos/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<div class="jumbotron">
   <p>
   <strong>ID:</strong>
   <%= @stanowisko.id %>
@@ -12,4 +12,5 @@
 <div class="actions">
 <%= link_to 'Edytuj', edit_stanowisko_path(@stanowisko), class: "btn btn-primary" %>
 <%= link_to 'Wróć', stanowiskos_path, class: "btn btn-success" %>
+</div>
 </div>
