--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -40,7 +40,7 @@
 
   <div class="field">
     <p>Dział użytkownika </label></br />
-    <%= f.collection_select :dzial_id, Dzial.all, :id, :nazwa, :prompt => "Wybierz", class:'dropdown-toggle' %></p>
+    <%= f.collection_select :dzial_id, Dzial.all, :id, :nazwa, prompt: "Wybierz", class:'dropdown-toggle' %></p>
   </div>
 
   <div class="actions">
