--- a/app/views/static_pages/statystyki.html.erb
+++ b/app/views/static_pages/statystyki.html.erb
@@ -19,13 +19,9 @@
 
 <div class="jumbotron">
 <h2>Pozostałe Statystki</h2>
-<h3>Ilość pracowników: <%= Pracownik.calculate(:count, :all) %>
-  <div class="progress">
-    <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= Pracownik.calculate(:count, :all) %>%">
-      <span class="sr-only">40% Complete (success)</span>
-    </div>
-  </div>
-</h3>
+<h3>Rejestracja użytkowników według dnia: </h3>
+<%= line_chart User.group_by_day(:created_at).count %>
+
 <h3>Ilość użytkowników: <%= User.calculate(:count, :all) %>
   <div class="progress">
     <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= User.calculate(:count, :all) %>%">
