--- a/app/views/zgloszenies/index.html.erb
+++ b/app/views/zgloszenies/index.html.erb
@@ -14,10 +14,12 @@
       <th>Status</th>
       <th>Data zgłoszenia</th>
       <th>Data naprawy</th>
-      <th>Opis uszkodzenia</th>
       <th>Nazwa urzadzenia</th>
+      <th>Opis uszkodzenia</th>
       <th>Wysylka</th>
-      <th>user_id</th>
+      <% if current_user.admin? %>
+        <th>ID użytkownika</th>
+      <% end %>
       <th colspan="3">Akcje</th>
     </tr>
   </thead>
@@ -33,10 +35,12 @@
         <td><%= zgloszeny.status %></td>
         <td><%= zgloszeny.data_zgloszenia %></td>
         <td><%= zgloszeny.data_naprawy %></td>
-        <td><%= zgloszeny.opis_uszkodzenia %></td>
         <td><%= zgloszeny.nazwa_urzadzenia %></td>
+        <td><%= zgloszeny.opis_uszkodzenia %></td>
         <td><%= zgloszeny.wysylka %></td>
-        <td><%= zgloszeny.user_id %></td>
+        <% if current_user.admin? %>
+          <td><%= zgloszeny.user_id %></td>
+        <% end %>
         <td><%= link_to 'Pokaż', zgloszeny, class:'btn btn-xs btn-primary' %>
         <%= link_to 'Edytuj', edit_zgloszeny_path(zgloszeny), class:'btn btn-xs btn-warning' %>
         <%= link_to 'Usuń', zgloszeny, method: :delete, data: { confirm: 'Jesteś pewny?' }, class:'btn btn-xs btn-danger' %></td>
